--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,11 +23,9 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Setup Emscripten
-        run: |
-          git clone https://github.com/emscripten-core/emsdk.git
-          cd emsdk
-          ./emsdk install latest
-          ./emsdk activate latest
+        uses: mymindstorm/setup-emsdk@v14
+        with:
+          version: latest
       - name: Compile C++ to WASM
         run: |
           emcc reverse.cpp -o reverse.js -s EXPORTED_FUNCTIONS='["_reverseString","_getStringLength"]' -s EXPORTED_RUNTIME_METHODS='["ccall","cwrap","UTF8ToString","stringToUTF8","_malloc","_free"]' -s MODULARIZE=1
