--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,9 +31,7 @@ jobs:
           emcc reverse.cpp -o reverse.js \
             -s EXPORTED_FUNCTIONS='["_reverseString","_getStringLength","_freeString"]' \
             -s EXPORTED_RUNTIME_METHODS='["ccall","cwrap","UTF8ToString"]' \
-            -s MODULARIZE=1 \
-            -s EXPORT_ES6=1 \
-            -s ALLOW_MEMORY_GROWTH=1
+            -s MODULARIZE=1
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
