--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,8 +29,8 @@ jobs:
       - name: Compile C++ to WASM
         run: |
           emcc reverse.cpp -o reverse.js \
-            -s EXPORTED_FUNCTIONS='["_reverseString","_getStringLength","_freeString"]' \
-            -s EXPORTED_RUNTIME_METHODS='["ccall","cwrap","UTF8ToString","stringToUTF8","allocate","UTF8ToString"]' \
+            -s EXPORTED_FUNCTIONS='["_reverseString","_getStringLength","_freeString","_malloc","_free"]' \
+            -s EXPORTED_RUNTIME_METHODS='["ccall","cwrap","UTF8ToString","stringToUTF8","lengthBytesUTF8"]' \
             -s MODULARIZE=1 \
             -s ALLOW_MEMORY_GROWTH=1 \
             -s INVOKE_RUN=0
